2010-07-06  Mark Meyer  <ofosos@gmail.com>

	* caldav/objects.py (DAVObject.save): Use idiomatic
	NotImplementedError and add a docstring
	* caldav/davclient.py (DAVObject.request): raise error on a http
	unauthorized (400) condition.

2010-07-06  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/elements/base.py (BaseElement.__add__): Removed unnecessary
	verification.
	* caldav/objects.py: Merged all methods from caldav.lib.commands.
	* caldav/commands.py: Removed, no longer needed.

2010-07-05  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/lib/commands.py (date_search): Fixed a typo.
	* caldav/lib/error.py (AuthorizationError): Added AuthorizationError.
	* caldav/davclient.py (DAVClient.request): Added 403 error handling.
	* caldav/davclient.py (DAVClient.__init__): Always pass proper Content-Type
	and Accept headers to the server. This is required by at least davical.
	Thanks to http://bitbucket.org/ofosos (all of the above)

2010-07-02  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/lib/commands.py (get_properties): Merged patch from issue #1.
	Thanks to http://bitbucket.org/ofosos

2010-06-29  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/elements/*.py: New files, definition for many dav and caldav
	elements to introduce a somewhat major refactoring.
	* caldav/davclient.py (DAVClient.propfind): Fixed documentation.
	* caldav/lib/commands.py: Major changes throughout the file to make use of
	the newly defined classes.
	* caldav/objects.py: Many small changes to the documentation an the usage
	of the ns method.

2010-06-14  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/davclient.py (DAVClient.put): Added a new "headers" parameter.
	* caldav/lib/commands.py (create_event): Added headers for content-type.
	* caldav/lib/commands.py: Added basic error management throughout the file.
	* caldav/objects.py: Minor improvements.
	* caldav/lib/error.py: New file, contains error definitions.

2010-06-09  Cyril Robert <cyrilrbt@gmail.com>
